@@ -2,11 +2,11 @@
 class DCH_CKEditor5 extends FG.DCH_BASE {     // https://ckeditor.com/docs/ckeditor5/latest/index.html
     el;                 // becomes childof this._div and is another  "div"  (see construct())
 
-    static menuText    = "CK5 based editor";
+    static menuText    = "CK5 based node";
     static menuTooltip = "An editor based on CK5 (see https://ckeditor.com/docs/ckeditor5/latest/index.html)";
 
     async construct() {
-        debugger; this.el = document.createElement("div");
+        this.el = document.createElement("div");
         this._div.appendChild(this.el);
         this.el.style.position = "absolute";
         this.el.style.left = "0px";
@@ -26,16 +26,7 @@ class DCH_CKEditor5 extends FG.DCH_BASE {     // https://ckeditor.com/docs/ckedi
     
     
     async exportData() {       // return data to be preserved/exported as a {}
-        debugger; return { "C" : this.el.innerHTML };
+        return { "C" : this.el.innerHTML };
     }
-    
-    
-//     async render() {
-// // we don't use render cuz this.el.innerHTML handles all that for us automatically
-// // --however-- another way is to set this.txt = await sr.readChunk() in importDoc() above, and then here
-// // use this.el.innerHTML = this.txt
-// // but this.el already fully handles the textology entirely so we can get away with 
-// // storing the content directly in it, instead of storing it on this object AND inside this.el
-//     }
 };
 export { DCH_CKEditor5 as DCH };      // always export 'as DCH' so DCH_BASE can load-on-the-fly and attach to globalThis.DCH
