@@ -9,8 +9,6 @@ THIS will probably be very tricky and difficult to do as technically if anything
 so we WILL have to get that zTop and zLeft logic going pretty soon!
 
 -----------------------------------------------------------------------------------------------------------------------
-rightclicking in indexView shows the contextmenu all the way to the left wall now, for some reason
-actually the menu is just appearing in totally bizarre places!
 -----------------------------------------------------------------------------------------------------------------------
 we broke the toolbar in the CTE dch
 -----------------------------------------------------------------------------------------------------------------------
@@ -25,6 +23,11 @@ when switching selected docs in the indexView it doesnt seem to reliably update 
 When dragging a node inside a box, and it causes scrollbars to appear/disappear, the ghost misaligns as everything 'jumped'
     We may need to fetch the boxes TRBL and push it on the ghost rather than calcing it from real mousepos
 -----------------------------------------------------------------------------------------------------------------------
+the whole kmStates thing is still buggy, it's not keeping clear track of all the mouse states and it can trip up
+some times.
+
+I need to seriously rethink it and make sure it's only 'in play' when ctrl+alt are down, with the exception of 
+on first time select, put the iconbar up
 -----------------------------------------------------------------------------------------------------------------------
 -----------------------------------------------------------------------------------------------------------------------
 -----------------------------------------------------------------------------------------------------------------------
