@@ -3,7 +3,10 @@
 2025-05- ------------------------------------------------------------------------------------------------------------
 2025-05- ------------------------------------------------------------------------------------------------------------
 2025-05- ------------------------------------------------------------------------------------------------------------
-2025-05- ------------------------------------------------------------------------------------------------------------
+* tooltips now show in context menus
+* fixed problem with toolbars not showing when node selected
+
+2025-05-07 ------------------------------------------------------------------------------------------------------------
 * fixed rect position 'properties' popup (was showing whole <body> relative, now is <parent> relative)
 * changed 'Set Element Styles' in context menu to "Properties"
 * added connected-client tracking (BG.clients)
